@@ -79,6 +79,7 @@ extern	int	show_default_port;
 extern	int	serverlist_countbots;
 
 extern	int	default_terminate;
+extern  int	default_stopxmms;
 extern	int	default_iconify;
 extern	int	default_launchinfo;
 extern	int	default_prelaunchexec;
