@@ -1,3 +1,6 @@
+Jun 19, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
+- Option to stop current song in XMMS when launching a game
+
 Jun 18, 2003: Ludwig Nussel <l-n@users.sourceforge.net>
 - Display team of player for Q3 mods that provide the necessary information
   (currently osp, truecombat)
